[fix] : 예약 가능 좌석 조회 네이티브 쿼리로 변경(반환 타입 Integer) 및 방어로직 추가